# pyqhull

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  test_pyqhull.py
src/: pyqhull.cpp
